# lsip-sephia

./: .gitignore  README.md
checkpoints/(100.0GHz,-12.0dBm)(10K,0.00dB,15dB)(RP=0)(Tiled=2)/: R00_E17_Acc90.28_(10h51m).pth  R00_run_states_(11h02m).json  R00_run_train_acc_log_(11h02m).npy  R01_E19_Acc91.11_(01h02m).pth  R01_run_states_(01h04m).json  R01_run_train_acc_log_(01h04m).npy  R02_E19_Acc90.14_(14h43m).pth  R02_run_states_(14h44m).json  R02_run_train_acc_log_(14h44m).npy  R03_E19_Acc89.94_(16h34m).pth  R03_run_states_(16h34m).json  R03_run_train_acc_log_(16h34m).npy  R04_E17_Acc90.82_(18h14m).pth  R04_run_states_(18h25m).json  R04_run_train_acc_log_(18h25m).npy  sweep_PowerScan_R00E17_[len=43].npy  sweep_PowerScan_R00E17_[len=43]_vals.npy  sweep_PowerScan_R02E19_[len=43].npy  sweep_PowerScan_R03E19_[len=42].npy  sweep_PowerScan_R03E19_[len=42]_vals.npy  sweep_PowerScan_R04E17_[len=44].npy  sweep_PowerScan_R04E17_[len=44]_vals.npy
checkpoints/(100.0GHz,-12.0dBm)(10K,0.00dB,6dB)(RP=0)(Tiled=2)/: R00_E16_Acc90.97_(05h05m).pth  R00_run_states_(05h20m).json  R00_run_train_acc_log_(05h20m).npy  R01_E17_Acc89.50_(06h52m).pth  R01_run_states_(07h03m).json  R02_E18_Acc90.72_(08h41m).pth  (+16 more)
picsim/: README.md  pyproject.toml
picsim/picsim/: __init__.py  config.py
picsim/picsim/circuits/: generic.py  mrr_based.py
picsim/picsim/components/: actives.py  generic.py  lasers.py  utils.py
picsim/picsim/datasets/: mnist_reduced.py
picsim/picsim/layers/: generic.py  linear.py
picsim/picsim/scripts/: logging.py  procedures.py  utils.py
sephia/: SEPhIA_OE2.py  utils.py
(+150 files in other folders)
